--- a/index.html
+++ b/index.html
@@ -6,6 +6,49 @@
     <title>Pesquisa Culturama</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Pesquisa Online!</h1>
+    </header>
+
+    <main>
+        <section>
+            <form action="" method="get">
+
+                <fieldset>
+                        <!-- DADOS PESSOAIS -->
+                        <legend><strong>DADOS PESSOAIS</strong></legend>
+
+                        <label for="userName">Nome</label>
+                        <input type="text" name="userName" required>
+                        <br>
+
+                        <label for="userAge">Idade</label>
+                        <input type="number" name="userAge" min="12" max="100" required>
+                        <br>
+
+                        <label for="birthDate">Data de Nascimento</label>
+                        <input type="date" name="birthDate">
+                        <br>
+
+                        <label for="userEmail">E-mail</label>
+                        <input type="email" name="userEmail" required>
+                        <br>
+
+                        <label for="userNumberPhone">Telefone</label>
+                        <input type="tel" name="userNumberPhone" pattern="[0-9]{11}" placeholder="(DD)X-XXXX-XXXX">
+                        <br>
+
+                        <label for="userImage">Upload de foto</label>
+                        <input type="file" accept="image/*">
+                        <br>
+
+                        
+
+                </fieldset>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
 </body>
 </html>
