--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <fieldset>
                     <legend>Hábitos</legend>
                     <p>Redes Sociais: </p>
-                    <input type="checkbox" name="social" value="instagram">
-                    <label for="social">Instagram</label>
+                    <input type="checkbox" name="social" id="instagram" value="instagram">
+                    <label for="instagram">Instagram</label>
                     <br>
 
                     <input type="checkbox" name="social" value="facebook">
@@ -121,6 +121,16 @@
 
                     <input type="checkbox" name="social" value="x">
                     <label for="social">X</label>
+                    <br>
+
+                    <label for="musicStyle">Estilo Musical:</label>
+                    <input list="styleTypes" id="musicStyle" type="text" name="userMusicStyle">
+                    <datalist id="styleTypes">
+                        <option value="Rock">
+                        <option value="Pop">
+                        <option value="Samba">
+                        <option value="Funk">
+                    </datalist>
 
                 </fieldset>
 
