--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
                         <option value="Samba">
                         <option value="Funk">
                     </datalist>
+                    <br>
+
+                    <label for="favoriteColor">Cor favorita</label>
+                    <input type="color" id="favoriteColor" name="userFavoriteColor">
 
                 </fieldset>
 
