--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section>
             <form action="" method="get">
 
-                <!-- <fieldset>
+                <fieldset>
                         
                         <legend><strong>DADOS PESSOAIS</strong></legend>
 
@@ -136,7 +136,7 @@
                     <label for="favoriteColor">Cor favorita</label>
                     <input type="color" id="favoriteColor" name="userFavoriteColor">
 
-                </fieldset>  -->
+                </fieldset> 
 
                 <fieldset>
                     <legend>Opinião</legend>
@@ -162,9 +162,17 @@
                     <br>
                     <textarea name="commet" id="userCommet" placeholder="Digite aqui..."></textarea>
 
+                </fieldset>
 
+                <fieldset>
+                    <legend>Confirmações</legend>
 
+                    <input type="checkbox" name="userLgpd" id="userLgpdTerms" value="Confirmed" required>
+                    <label for="userLgpdTerms"> Eu aceitos participar a pesquisa</label>
+                    <br>
 
+                    <input type="checkbox" name="userGetResult" id="getResult" value="accept">
+                    <label for="getResult"> Eu aceitos receber o resultado por e-mail</label>
                 </fieldset>
 
 
