--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <section>
-            <form action="" method="get">
+            <form action="sucesso.html" method="get">
 
                 <fieldset>
                         
@@ -184,6 +184,7 @@
 
                 <button type="submit">Enviar</button>
                 <button type="reset">Limpar</button>
+
             </form>
         </section>
     </main>
